# ollie

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  vitest.config.js
.claude/: settings.json
.claude/skills/cut-release/: SKILL.md
.claude/skills/sprint-plan/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/work-issue/: SKILL.md
.github/: CODEOWNERS  labels.yml  trust-list.yml
.github/prompts/: triage.md
.github/workflows/: claude-code-review.yml  claude.yml  codeql.yml  dco.yml  docker-publish.yml  gitleaks.yml  js-tests.yml  setup-labels.yml  setup-project.yml  triage.yml
docs/: DESIGN.md
docs/automation/: agent-automation-design.md
docs/superpowers/: OVERNIGHT-PROGRESS.md
docs/superpowers/plans/: 2026-04-26-ollie-blob-store.md  2026-05-06-loads-facilities-api.md  2026-05-06-v1.2.0-addendum.md  2026-05-06-v1.2.0.md  2026-05-07-v1.3.0.md  2026-05-07-v1.3.1.md  2026-05-07-v1.3.2.md  2026-05-11-v1.5.0.md  2026-05-12-v1.6.0.md  2026-05-13-v1.7.0.md  2026-05-14-v1.8.0.md  2026-05-15-v1.10.0.md  2026-05-15-v1.9.0.md  2026-05-16-v1.11.0.md  2026-05-16-v1.12.0.md  2026-05-17-v1.13.0.md  2026-05-17-v1.13.1.md  2026-05-18-v1.13.2.md  2026-05-20-dispatcher-api-keys.md  2026-05-20-doc-preview-polish.md  2026-05-21-trip-load-display-polish.md  2026-05-22-v1.17-mileage-stop-coherence.md  2026-05-28-blob-apikey-ui.md  2026-05-28-mcp-notification-spec-fix.md  2026-05-28-oauth-authorization-server.md  2026-05-28-refresh-tokens-foundation.md  2026-05-30-terminals-driver-pay-settlement.md  2026-06-02-open-source-prep.md  2026-06-09-fleet-ui-crud-phase-4-loads.md  (+10 more)
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/ai/: embed.rs  expense_fields.rs  extract.rs  mod.rs  ocr.rs  summarize.rs
src/api/: auth.rs  blob.rs  blobs.rs  dispatchers.rs  driver_actions.rs  drivers.rs  events.rs  facilities.rs  loads.rs  mileage_summary.rs  mod.rs  refresh_tokens.rs  trailers.rs  trip_actions.rs  trips.rs  trucks.rs  utils.rs  version.rs
src/db/: authorization_code_ops.rs  blob_ops.rs  dispatcher_api_key_ops.rs  dispatcher_ops.rs  driver_credentials_ops.rs  driver_ops.rs  event_ops.rs  expense_ops.rs  facility_ops.rs  fleet_user_api_key_ops.rs  fleet_user_ops.rs  load_ops.rs  maintenance_ops.rs  mod.rs  oauth_client_ops.rs  ops.rs  refresh_token_ops.rs  terminal_ops.rs  trailer_ops.rs  trip_ops.rs  truck_ops.rs
src/events/: mod.rs
src/geocoding/: mod.rs
src/models/: authorization_code.rs  blob.rs  dispatcher.rs  dispatcher_api_key.rs  dispatcher_credentials.rs  driver.rs  driver_credentials.rs  event.rs  expense.rs  facility.rs  fleet_user.rs  fleet_user_api_key.rs  fleet_user_credentials.rs  load.rs  maintenance.rs  mod.rs  oauth_client.rs  pay.rs  permission.rs  refresh_token.rs  terminal.rs  trailer.rs  trip.rs  truck.rs
src/pipeline/: embedding_backfill.rs  geocoding.rs  mod.rs  recovery.rs  routing.rs  worker.rs
src/routing/: mod.rs
src/services/: mod.rs  trip_lifecycle.rs  trip_stops.rs
src/storage/: extract_store.rs  mod.rs  shard.rs
static/dispatch/: app.js  index.html
static/driver/: app.js  index.html  manifest.json  sw.js
static/fleet/: app.js  index.html  router.js
tests/: driver_equipment_test.rs  driver_expenses_test.rs  expenses_test.rs  integration_test.rs  migration_test.rs  oauth_flow.rs  pipeline_empty_vision_test.rs  pipeline_ocr_test.rs  refresh_token_flow.rs  terminals_pay_settlement_test.rs  trip_lifecycle_fixes_test.rs
tests/common/: mod.rs
tests/driver/: expense-meta.test.js  time.test.js  week.test.js
tests/fleet/: account-footer.test.js  api.test.js  auth.test.js  confirm.test.js  events.test.js  expense-detail.test.js  expense-meta.test.js  expenses.test.js  form.test.js  format.test.js  icons.test.js  list.test.js  load-form-payload.test.js  maintenance-form.test.js  maintenance.test.js  nav.test.js  router.test.js  scope-gate.test.js  setup.js  smoke.test.js  table.test.js  theme.test.js  topbar-controls.test.js  trip-form-payload.test.js  trips-loads-controls.test.js
(+152 files in other folders)
